# fejix_runtime

./: .gitignore  BUILD.md  CMakeLists.txt  CODE_STYLE.md  CODING_NOTES.md  LICENSE.txt  README.md  STRUCTURE.md  xmake.lua
deprecated/: fejix.h  fejix_aliases.h  fejix_generic.c  fejix_global.h  fejix_sdl.c  fejix_stdui.c  fejix_stdui.h
deprecated/opengl3/: README.md  opengl3.c  opengl3.h  shaders.c
include/fejix_private/: backend_init.h  drawing.h  layout.h  opengl3_generic.h  traverse_widgets.h
include/fejix_private/nanovg/: drawing.h  nanovg.h
include/fejix_private/x11/: opengl3.h  opengl3_defs.h  window_utils.h
include/fejix_runtime/: backend.h  defines.h  definitions.h  events.h  fejix.h  fejix_aliases.h  fejix_backend.h  fejix_defines.h  fejix_events.h  fejix_global.h  fejix_helper.h  fejix_runtime.h  fejix_stdui.h  fejix_winapi.h  fejix_window.h  fejix_x11.h  fejix_xcb.h  helper.h  stdlayout.h  stdui.h  typedefs.h
include/fejix_runtime/internal/: README.md  backend.h  features.h  layout.h  platform.h  winapi.h  x11.h
include/fejix_runtime/internal/features/: opengl.h  varsize.h
include/fejix_runtime/internal/platform/: winapi.h  x11.h
include/fejix_runtime/internal/platform/x11/: opengl.h
include/fejix_runtime_dev/: definitions.h
include/fejix_runtime_dev/x11/: utils.h
src/: drawing.c  fejix.c  fejix_generic.c  fejix_layout.c  fejix_private.c  fejix_private.h  fejix_sdl.c  fejix_stdui.c  generic.c  layout.c  stdlayout.c  stdui.c  traverse_widgets.c
src/backend/: backend_init.c
src/backend/nanovg/: drawing.c  nanovg.c
src/draw/: draw.h
src/draw/opengl3/: opengl3.c
src/fejix_drawer/nanovg/: nanovg.c  nanovg.h
src/fejix_drawer/opengl3/: opengl3.c  opengl3.h  shaders.c  shaders.glsl
src/fejix_platform/: backend.c
src/fejix_platform/mswindows/opengl3/: opengl3.c
src/fejix_platform/x11/: main_loop.c  window_utils.c  x11.c
src/fejix_platform/x11/opengl3/: opengl3.c
src/platform/: backend.c  backend_wrapper.c  backend_wrapper.h  fejix_backend_wrapper.c  fejix_backend_wrapper.h
src/platform/backend_def/: opengl3.h
src/platform/backend_definitions/: opengl3.h
src/platform/mswindows/: fejix_winapi.c  winapi.c
src/platform/mswindows/opengl3/: opengl3.c
src/platform/winapi/: fejix_winapi.c
src/platform/x11/: README.md  fejix_backends.c  fejix_backends.h  fejix_x11.c  fejix_xcb.c  main_loop.c  opengl.c  utils.c  varsize.c  window_utils.c  window_utils.h  x11.c
src/platform/x11/opengl3/: opengl3.c  opengl3.h
test/: debug.c  debug.h  main.c  myassert.c  myassert.h
tools/: convert_shaders.py  proc-opengl3.sh
tools/cmake/: add_deps.cmake  add_sources.cmake  configure_output.cmake  detect_platform.cmake  process_options.cmake  select_sources.cmake
tools/cmake/build_3dparty/: nanovg.cmake
